Fix the image in CDC landscape medium
The previous changes to CDC portrait medium accidentally messed up this
page.

--- a/bloom_nofos/bloom_nofos/static/theme-opdiv-cdc-blue.css
+++ b/bloom_nofos/bloom_nofos/static/theme-opdiv-cdc-blue.css
@@ -60,8 +60,10 @@ h1 {
   background: var(--color--vibrant-blue);
 }
 
-.nofo--cover-page--footer .nofo--cover-page--footer--image {
-  width: 100%;
+/* Cover page: medium image */
+
+.nofo--cover-page--medium .nofo--cover-page--footer--subheading {
+  color: var(--color--white);
 }
 
 /* Cover page: hero image */
