--- a/bloom_nofos/bloom_nofos/static/theme-opdiv-cdc-white.css
+++ b/bloom_nofos/bloom_nofos/static/theme-opdiv-cdc-white.css
@@ -24,8 +24,10 @@
   color: var(--color--vibrant-blue);
 }
 
-.nofo--cover-page--footer .nofo--cover-page--footer--image {
-  width: 100%;
+/* Cover page: medium image */
+
+.nofo--cover-page--medium .nofo--cover-page--footer--subheading {
+  color: var(--color--vibrant-blue);
 }
 
 /* Cover page: hero image */
